--- a/Fcitx.mw
+++ b/Fcitx.mw
@@ -1,128 +1,40 @@
-<languages />
-<translate>
-<!--T:1-->
-{{InfoBox stack
-|{{InfoBox homepage|http://fcitx-im.org|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox github|fcitx/fcitx/}}
-}}
-'''Fcitx''' ('''F'''lexible '''C'''ontext-aware '''I'''nput '''T'''ool with e'''X'''tension support) <nowiki>[ˈfaɪtɪks]</nowiki> is [[Article description::an input method framework with support for many languages and scripts.]]
+'''Fcitx''' (Free Chinese Input Toy for X) is a Chinese input method. You can install Fcitx by using the following command:
 
-== Installation == <!--T:2-->
-
-=== USE flags === <!--T:3-->
-
-<!--T:4-->
-{{USEflag|package=app-i18n/fcitx}}
-
-<!--T:5-->
-{{Note|It is strongly recommended to add the <code>gtk2</code> or <code>gtk3</code> USE flags when applications are installed that make use of these toolkits.}}
-
-=== Emerge === <!--T:6-->
-
-<!--T:7-->
 {{Emerge|app-i18n/fcitx}}
 
-== Using Fcitx == <!--T:8-->
+== Use Flags ==
 
-<!--T:9-->
-In order to use Fcitx in X, the following environment variables must be added to start up files and exported:
-
-<!--T:10-->
-When using login managers such as GDM, KDM or [[LightDM]] to start the X server add them to the {{Path|~/.xprofile}} file. When using the {{c|startx}} command or [[SLiM]] to login, add them to the {{Path|~/.xinitrc}} file.
-
-<!--T:11-->
-If the <code>gtk2</code> or <code>gtk3</code> USE flags where used upon installation, <code><module></code> (in the examples below) will be <code>fcitx</code>, otherwise it should be <code>xim</code>.
-
-<!--T:12-->
-{{FileBox|filename=~/.xprofile|lang=bash|1=
-export XMODIFIERS="@im=fcitx"
-export QT_IM_MODULE=<module>
-export GTK_IM_MODULE=<module>
+{{USEflag|package=app-i18n/fcitx
+|cairo+yes+
+|gtk++yes
+|pango+yes+
+|table+yes+
+|debug
+|gtk3
+|opencc
+|qt
+|static-libs
+|zhengma
 }}
 
-<!--T:13-->
-Remember, make {{Path|~/.xinitrc}} look like the example below only if using {{c|startx}} or SLiM to start the X server:
+Note: If you want to use Fcitx in Gtk2, Gtk3 or Qt programs, you need to add gtk, gtk3 or qt in USE.
 
-<!--T:14-->
-{{FileBox|filename=~/.xinitrc|lang=bash|1=
-export XMODIFIERS="@im=fcitx"
-export QT_IM_MODULE=<module>
-export GTK_IM_MODULE=<module>
-}}
+== Using Fcitx ==
 
-<!--T:15-->
-It is recommended to start the [[D-Bus]] session bus before Fcitx starts. Add these to the '''beginning''' of the X start up file ({{Path|~/.xprofile}} or {{Path|~/.xinitrc}}):
+In order to use Fcitx in X, you need to add these environment variables(such as ~/.xinitrc, ~/.*shrc):
 
-<!--T:16-->
-{{FileBox|filename=~/.xprofile or ~/.xinitrc|lang=bash|1=
-eval "$(dbus-launch --sh-syntax --exit-with-session)"
-}}
+<code>LANG=zh_CN.UTF-8
+LC_ALL=
+XIM=fcitx
+XIM_PROGRAM=fcitx
+XMODIFIERS="@im=fcitx"
+QT_IM_MODULE=xim
+GTK_IM_MODULE=xim</code>
 
-<!--T:17-->
-{{FileBox|filename=~/.xinitrc|lang=bash|1=
-eval "$(dbus-launch --sh-syntax --exit-with-session)"
-}}
+Note: If you want to use Fcitx in English language, you may add <code>LC_CTYPE=zh_CN.UTF-8</code> in environment.
 
-<!--T:18-->
-{{Warning|When desiring to use Fcitx in X, the system [[Localization|locale]] '''cannot''' be ''C'' or ''POSIX''.}}
+== Configuration ==
 
-== Configuration == <!--T:19-->
+You can edit Fcitx's configuration file at <code>~/.config/fcitx/config</code>.
 
-<!--T:20-->
-Edit Fcitx's configuration file at {{Path|~/.config/fcitx/config}}
-
-<!--T:21-->
-Also, there are GUI tools to configure Fcitx. Install {{Package|app-i18n/fcitx-configtool}} (based on GTK2 or GTK3) or {{Package|app-i18n/kcm-fcitx}} (based on KDE) to use them.
-
-== Frontend == <!--T:22-->
-
-<!--T:23-->
-Other than the built-in classic UI, there is also a frontend which integrates into KDE well called Kimpanel (included in {{Package|kde-plasma/kdeplasma-addons}}). The <code>dbus</code> flag must be enabled to use Kimpanel. Once installed, add the kimpanel plasmoid to the plasma panel and fcitx will switch to it by its self.
-
-== Specific language support == <!--T:24-->
-
-=== Chinese === <!--T:25-->
-
-<!--T:26-->
-Fcitx itself has built-in pinyin support. Enabling the <code>table</code> USE flag will provide multiple table-based input methods such as WuBi and Ziranma.
-
-<!--T:27-->
-Install {{Package|app-i18n/fcitx-cloudpinyin}} to have better results in the candidate words list.
-
-<!--T:28-->
-The built-in pinyin use a simple algorithm, and there are other pinyin input methods using other algorithms. Install {{Package|app-i18n/fcitx-sunpinyin}}, {{Package|app-i18n/fcitx-libpinyin}}, or {{Package|app-i18n/fcitx-rime}} to use them.
-
-<!--T:29-->
-For Bopomofo support {{Package|app-i18n/fcitx-chewing}} or {{Package|app-i18n/fcitx-libpinyin}} can be installed.
-
-<!--T:30-->
-For Cangjie or Boshiamy support install {{Package|app-i18n/fcitx-table-extra}}.
-
-=== Japanese === <!--T:31-->
-
-<!--T:32-->
-Install {{Package|app-i18n/fcitx-anthy}}:
-
-<!--T:33-->
-{{Emerge|app-i18n/fcitx-anthy}}
-
-=== Korean === <!--T:34-->
-
-<!--T:35-->
-Install {{Package|app-i18n/fcitx-hangul}}:
-
-<!--T:36-->
-{{Emerge|app-i18n/fcitx-hangul}}
-
-=== Vietnamese === <!--T:37-->
-
-<!--T:38-->
-Install {{Package|app-i18n/fcitx-unikey}}:
-
-<!--T:39-->
-{{Emerge|app-i18n/fcitx-unikey}}
-
-</translate>
-
-[[Category:Localization]]
+Also, there is a tool to configure Fcitx called {{Package|fcitx-configtool}}, which is in the Gentoo-zh [[overlay]]. (You may need to add the '~arch' keyword).
