Created page with "This variable is a colon delimited list of where USE flags are pulled from when building packages. If the USE flag is listed in multiple sources, the first one has highest priori..."

--- a/USE_ORDER.mw
+++ b/USE_ORDER.mw
@@ -1,26 +1,20 @@
-{{DISPLAYTITLE:USE_ORDER}}
-
 This variable is a colon delimited list of where USE flags are pulled from when building packages. If the USE flag is listed in multiple sources, the first one has highest priority.
 
-{| class="table table-condensed table-striped"
+{| class="wikitable"
 |-
-! Keyword !! USE Source
+! keyword !! USE Source
 |-
-| env || From the current environment variables (USE and those listed in <var>USE_EXPAND</var>)
+| denv || ?
 |-
-| pkg || {{Path|/etc/portage/package.use}}
+| pkg || /etc/portage/package.use
 |-
-| conf || {{Path|/etc/portage/make.conf}}
+| conf || /etc/make.conf
 |-
-| defaults || From {{Path|make.defaults}} and {{Path|package.use}} in the profile (e.g. {{Path|/etc/portage/make.profile/package.use}}) (see {{c|man 5 portage}}).
+| defaults || ?
 |-
 | pkginternal || From the ebuild itself
 |-
-| repo || From {{Path|make.defaults}} and {{Path|package.use}} in the repo's {{Path|profiles/}} top directory (e.g. {{Path|/var/db/repos/gentoo/profiles/package.use}}) (see {{c|man 5 portage}}).
+| repo || ?
 |-
-| env.d || {{Path|/etc/env.d}}
+| env.d || ?
 |}
-
-The default USE ordering is <code>USE_ORDER="env:pkg:conf:defaults:pkginternal:repo:env.d"</code>.
-
-[[Category:Portage]]
